--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="onButton1Clicked"
-        android:text="뭐지\n개행도되네\nasdfasdfasdfasdfasdfasdfasdfasdfasdf\n스스로 중앙으로 졍렬하는군"
+        android:text="가로: 1000\n세로: 1000"
         android:textSize="30dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -59,6 +59,7 @@
         app:layout_constraintTop_toBottomOf="@+id/linearlayout1"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintVertical_bias="0.0">
+
         <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
@@ -130,6 +131,16 @@
                 app:layout_constraintLeft_toLeftOf="@+id/guideline4"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/button5" />
+
+            <Button
+                android:id="@+id/button21"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:onClick="onButton_NewActivity5"
+                android:text="C, S, T, I"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="@+id/guideline4"
+                app:layout_constraintTop_toBottomOf="@+id/button14" />
 
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
