--- a/app/src/main/res/layout/activity_sub5.xml
+++ b/app/src/main/res/layout/activity_sub5.xml
@@ -6,7 +6,17 @@
     android:layout_height="match_parent"
     tools:context="com.android.lmj.firstapp.SubActivity5">
 
-
+    <Button
+        android:id="@+id/button26"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="일시중지"
+        android:textColor="#ff000000"
+        android:textSize="20dp"
+        android:onClick="onButton_TimerStop"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button24"
@@ -29,7 +39,7 @@
         android:onClick="onButton_TimeSec0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/button26"  />
 
     <Button
         android:id="@+id/buttonT1"
@@ -52,4 +62,17 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonT1" />
+
+    <Button
+        android:id="@+id/button27"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="타이머 초기화"
+        android:textColor="#ff000000"
+        android:textSize="20dp"
+        android:onClick="onButton_TimerReset"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/button24" />
+
 </android.support.constraint.ConstraintLayout>
