--- a/app/src/main/res/layout/activity_sub8.xml
+++ b/app/src/main/res/layout/activity_sub8.xml
@@ -6,13 +6,34 @@
     android:layout_height="match_parent"
     tools:context="com.android.lmj.firstapp.SubActivity8">
 
-    <Button
-        android:id="@+id/button33"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
+    <View
+        android:id="@+id/touchViewMain"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="#00000000"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"/>
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="#ff000000"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent">
+
+        <com.android.lmj.firstapp.view.DrawView
+            android:id="@+id/drawOutput"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="#ffffffff"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp" />
+    </android.support.constraint.ConstraintLayout>
 </android.support.constraint.ConstraintLayout>
