--- a/app/src/main/res/layout/activity_sub8.xml
+++ b/app/src/main/res/layout/activity_sub8.xml
@@ -24,11 +24,10 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent">
 
-        <com.android.lmj.firstapp.view.DrawView
+        <com.android.lmj.firstapp.view.SurfaceDrawView
             android:id="@+id/drawOutput"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:background="#ff000000"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
