--- a/app/src/main/res/layout/activity_sub8.xml
+++ b/app/src/main/res/layout/activity_sub8.xml
@@ -20,7 +20,7 @@
             android:id="@+id/drawOutput"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginBottom="30dp"
+            android:layout_marginBottom="40dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -29,9 +29,9 @@
 
     <Button
         android:id="@+id/button33"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="초기화"
+        android:text="재시작"
         android:textSize="20dp"
         android:textColor="#ff000000"
         android:onClick="onButton_Reset"
